# handwriting

./: README.md  pyproject.toml
src/handwriting/: __main__.py
